--- a/loader_process.ipynb
+++ b/loader_process.ipynb
@@ -923,48 +923,471 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_indices = df_filtered[df_filtered['Usage'] == 'Training'].index\n",
-    "val_indices = df_filtered[df_filtered['Usage'] == 'PublicTest'].index\n",
-    "test_indices = df_filtered[df_filtered['Usage'] == 'PrivateTest'].index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train = \n",
-    "y_train =\n",
-    "x_val =\n",
-    "y_val =\n",
-    "x_test =\n",
-    "x_test ="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 35538 is out of bounds for axis 0 with size 35538",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtest_indices\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 35538 is out of bounds for axis 0 with size 35538"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_2876/3718229080.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_filtered['new_id'] = np.arange(df_filtered.shape[0])\n"
      ]
     }
    ],
    "source": [
-    "dataset[test_indices].shape"
+    "df_filtered['new_id'] = np.arange(df_filtered.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pixels</th>\n",
+       "      <th>Usage</th>\n",
+       "      <th>neutral</th>\n",
+       "      <th>happiness</th>\n",
+       "      <th>surprise</th>\n",
+       "      <th>sadness</th>\n",
+       "      <th>anger</th>\n",
+       "      <th>disgust</th>\n",
+       "      <th>fear</th>\n",
+       "      <th>contempt</th>\n",
+       "      <th>unknown</th>\n",
+       "      <th>new_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>70 80 82 72 58 58 60 63 54 58 60 48 89 115 121...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>151 150 147 155 148 133 111 140 170 174 182 15...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>231 212 156 164 174 138 161 173 182 200 106 38...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24 32 36 30 32 23 19 20 30 41 21 22 32 34 21 1...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4 0 0 0 0 0 0 0 0 0 0 0 3 15 23 28 48 50 58 84...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>55 55 55 55 55 54 60 68 54 85 151 163 170 179 ...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>20 17 19 21 25 38 42 42 46 54 56 62 63 66 82 1...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>77 78 79 79 78 75 60 55 47 48 58 73 77 79 57 5...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>85 84 90 121 101 102 133 153 153 169 177 189 1...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>255 254 255 254 254 179 122 107 95 124 149 150...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>30 24 21 23 25 25 49 67 84 103 120 125 130 139...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>39 75 78 58 58 45 49 48 103 156 81 45 41 38 49...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>219 213 206 202 209 217 216 215 219 218 223 23...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>148 144 130 129 119 122 129 131 139 153 140 12...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>4 2 13 41 56 62 67 87 95 62 65 70 80 107 127 1...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>107 107 109 109 109 109 110 101 123 140 144 14...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>14 14 18 28 27 22 21 30 42 61 77 86 88 95 100 ...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>134 124 167 180 197 194 203 210 204 203 209 20...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>219 192 179 148 208 254 192 98 121 103 145 185...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 7 12 23 45 38 ...</td>\n",
+       "      <td>Training</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               pixels     Usage  neutral  \\\n",
+       "0   70 80 82 72 58 58 60 63 54 58 60 48 89 115 121...  Training        4   \n",
+       "1   151 150 147 155 148 133 111 140 170 174 182 15...  Training        6   \n",
+       "2   231 212 156 164 174 138 161 173 182 200 106 38...  Training        5   \n",
+       "3   24 32 36 30 32 23 19 20 30 41 21 22 32 34 21 1...  Training        4   \n",
+       "4   4 0 0 0 0 0 0 0 0 0 0 0 3 15 23 28 48 50 58 84...  Training        9   \n",
+       "5   55 55 55 55 55 54 60 68 54 85 151 163 170 179 ...  Training        6   \n",
+       "6   20 17 19 21 25 38 42 42 46 54 56 62 63 66 82 1...  Training        2   \n",
+       "7   77 78 79 79 78 75 60 55 47 48 58 73 77 79 57 5...  Training        0   \n",
+       "8   85 84 90 121 101 102 133 153 153 169 177 189 1...  Training        0   \n",
+       "9   255 254 255 254 254 179 122 107 95 124 149 150...  Training        0   \n",
+       "10  30 24 21 23 25 25 49 67 84 103 120 125 130 139...  Training        2   \n",
+       "11  39 75 78 58 58 45 49 48 103 156 81 45 41 38 49...  Training       10   \n",
+       "12  219 213 206 202 209 217 216 215 219 218 223 23...  Training        5   \n",
+       "13  148 144 130 129 119 122 129 131 139 153 140 12...  Training        9   \n",
+       "14  4 2 13 41 56 62 67 87 95 62 65 70 80 107 127 1...  Training        0   \n",
+       "15  107 107 109 109 109 109 110 101 123 140 144 14...  Training        0   \n",
+       "16  14 14 18 28 27 22 21 30 42 61 77 86 88 95 100 ...  Training        4   \n",
+       "18  134 124 167 180 197 194 203 210 204 203 209 20...  Training        1   \n",
+       "19  219 192 179 148 208 254 192 98 121 103 145 185...  Training        6   \n",
+       "20  1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 7 12 23 45 38 ...  Training        5   \n",
+       "\n",
+       "    happiness  surprise  sadness  anger  disgust  fear  contempt  unknown  \\\n",
+       "0           0         0        1      3        2     0         0        0   \n",
+       "1           0         1        1      0        0     0         0        2   \n",
+       "2           0         0        3      1        0     0         0        1   \n",
+       "3           0         0        4      1        0     0         0        1   \n",
+       "4           0         0        1      0        0     0         0        0   \n",
+       "5           0         0        1      0        0     1         1        1   \n",
+       "6           0         0        8      0        0     0         0        0   \n",
+       "7          10         0        0      0        0     0         0        0   \n",
+       "8          10         0        0      0        0     0         0        0   \n",
+       "9           0         6        0      0        0     4         0        0   \n",
+       "10          0         0        0      8        0     0         0        0   \n",
+       "11          0         0        0      0        0     0         0        0   \n",
+       "12          0         0        3      0        0     0         0        2   \n",
+       "13          0         0        1      0        0     0         0        0   \n",
+       "14         10         0        0      0        0     0         0        0   \n",
+       "15          0         6        0      1        0     3         0        0   \n",
+       "16          6         0        0      0        0     0         0        0   \n",
+       "18          0         2        4      2        0     0         0        1   \n",
+       "19          1         0        0      3        0     0         0        0   \n",
+       "20          0         0        4      0        0     0         0        1   \n",
+       "\n",
+       "    new_id  \n",
+       "0        0  \n",
+       "1        1  \n",
+       "2        2  \n",
+       "3        3  \n",
+       "4        4  \n",
+       "5        5  \n",
+       "6        6  \n",
+       "7        7  \n",
+       "8        8  \n",
+       "9        9  \n",
+       "10      10  \n",
+       "11      11  \n",
+       "12      12  \n",
+       "13      13  \n",
+       "14      14  \n",
+       "15      15  \n",
+       "16      16  \n",
+       "18      17  \n",
+       "19      18  \n",
+       "20      19  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_filtered.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_indices = df_filtered['new_id'][df_filtered['Usage'] == 'Training']\n",
+    "val_indices = df_filtered['new_id'][df_filtered['Usage'] == 'PublicTest']\n",
+    "test_indices = df_filtered['new_id'][df_filtered['Usage'] == 'PrivateTest']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = dataset[train_indices]\n",
+    "y_train = dataset_labels[train_indices]\n",
+    "x_val = dataset[val_indices]\n",
+    "y_val = dataset_labels[val_indices]\n",
+    "x_test = dataset[test_indices]\n",
+    "y_test = dataset_labels[test_indices]"
    ]
   },
   {
@@ -972,22 +1395,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# MISSING: split datasets (dataset and dataset_labels) into train/validation/test (FIX ERROR), and add a single function for all this"
+    "# MISSING:\n",
+    "# 1) create one function that does all this at once\n",
+    "# 2) create a file with the new repaired dataset and another function to directly load data from it instead of the damaged one\n",
+    "# 3) optimize the loading functions with numpy operations"
    ]
   }
  ],
