--- a/loader_process.ipynb
+++ b/loader_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load all columns but the first\n",
+    "\n",
     "pixels_Usage = pd.read_csv('fer2013.csv').iloc[:,1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
        "4  4 0 0 0 0 0 0 0 0 0 0 0 3 15 23 28 48 50 58 84...  Training"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
        "4        0   0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +386,7 @@
        "4          0         0        1      0        0     0         0        0   0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +410,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +434,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -489,28 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_2876/726027918.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered.drop(columns=['NF'],inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_filtered.drop(columns=['NF'],inplace=True)"
+    "df_filtered = df_filtered.drop(columns=['NF'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +635,7 @@
        "4          0         0        1      0        0     0         0        0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,56 +647,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = [image.split() for image in df_filtered['pixels'].tolist()]  # create full dataset of pixels, but each pixel is still a string"
+    "dataset = df_filtered['pixels'].apply(lambda x: np.fromstring(x, sep=' ', dtype=int)).values  # create full dataset of pixels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "35538 2304\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(dataset),len(dataset[0]))  # shape is correct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# now do the pixel conversion to integer\n",
-    "\n",
-    "for image in range(len(dataset)):\n",
-    "    dataset[image] = [int(pixel) for pixel in dataset[image]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create image dataset, properly shaped\n",
     "\n",
-    "dataset = np.array(dataset).reshape(-1, 48, 48, 1)"
+    "dataset = np.stack(dataset).reshape(-1, 48, 48, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +676,7 @@
        "(35538, 48, 48, 1)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +815,7 @@
        "4          0         0        1      0        0     0         0        0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,16 +826,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_labels = df_filtered.iloc[:,2:]"
+    "dataset_labels = df_filtered.drop(['pixels', 'Usage'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +844,7 @@
        "(35538, 9)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +873,7 @@
        "(35538, 9)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,29 +884,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_2876/3718229080.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_filtered['new_id'] = np.arange(df_filtered.shape[0])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_filtered['new_id'] = np.arange(df_filtered.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1304,7 @@
        "20      19  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
