--- a/loader_process.ipynb
+++ b/loader_process.ipynb
@@ -1346,8 +1346,7 @@
    "source": [
     "# MISSING:\n",
     "# 1) create one function that does all this at once\n",
-    "# 2) create a file with the new repaired dataset and another function to directly load data from it instead of the damaged one\n",
-    "# 3) optimize the loading functions with numpy operations"
+    "# 2) create a file with the new repaired dataset and another function to directly load data from it instead of the damaged one"
    ]
   }
  ],
