--- a/class_weights.ipynb
+++ b/class_weights.ipynb
@@ -622,6 +622,15 @@
    "source": [
     "class_weights"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('class_weights.npy', class_weights)"
+   ]
   }
  ],
  "metadata": {
