--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1553,7 +1553,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.4\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.4\n",
       "1        0.6\n",
       "2        0.5\n",
       "3        0.4\n",
@@ -1566,7 +1566,7 @@
       "35886    0.2\n",
       "Name: neutral, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
       "1        0.0\n",
       "2        0.0\n",
       "3        0.0\n",
@@ -1579,7 +1579,7 @@
       "35886    0.0\n",
       "Name: happiness, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
       "1        0.1\n",
       "2        0.0\n",
       "3        0.0\n",
@@ -1592,7 +1592,7 @@
       "35886    0.0\n",
       "Name: surprise, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.1\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.1\n",
       "1        0.1\n",
       "2        0.3\n",
       "3        0.4\n",
@@ -1605,7 +1605,7 @@
       "35886    0.5\n",
       "Name: sadness, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.3\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.3\n",
       "1        0.0\n",
       "2        0.1\n",
       "3        0.1\n",
@@ -1618,7 +1618,7 @@
       "35886    0.1\n",
       "Name: anger, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.2\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.2\n",
       "1        0.0\n",
       "2        0.0\n",
       "3        0.0\n",
@@ -1631,7 +1631,7 @@
       "35886    0.1\n",
       "Name: disgust, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
       "1        0.0\n",
       "2        0.0\n",
       "3        0.0\n",
@@ -1644,7 +1644,7 @@
       "35886    0.0\n",
       "Name: fear, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
       "1        0.0\n",
       "2        0.0\n",
       "3        0.0\n",
@@ -1657,7 +1657,7 @@
       "35886    0.0\n",
       "Name: contempt, Length: 35538, dtype: float64' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  final.iloc[:,2:] = final.iloc[:,2:]/10\n",
-      "/var/folders/2r/kmz9wfbn6vn03_888ghbrcd00000gn/T/ipykernel_5670/654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
+      "C:\\Users\\Alessio\\AppData\\Local\\Temp\\ipykernel_8392\\654623638.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        0.0\n",
       "1        0.2\n",
       "2        0.1\n",
       "3        0.1\n",
